target/main/CSlang/parser/CSlangParser.py
# Generated from main/CSlang/parser/CSlang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CSlangParser ( Parser ):

    grammarFileName = "CSlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Program'", "<INVALID>", "<INVALID>", 
                     "'import'", "'@main'", "'const'", "'var'", "'int'", 
                     "'float'", "'string'", "'bool'", "'break'", "'class'", 
                     "'continue'", "'else'", "'<-'", "'if'", "'new'", "'for'", 
                     "'return'", "'void'", "'null'", "'constructor'", "'func'", 
                     "'self'", "'+'", "'-'", "'*'", "'/'", "'\\'", "'%'", 
                     "'!='", "'=='", "'<'", "'>'", "'<='", "'>='", "'||'", 
                     "'&&'", "'!'", "'^'", "':='", "'='", "'['", "']'", 
                     "'{'", "'}'", "'('", "')'", "';'", "':'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "LINE_CMT", "BLOCK_CMT", 
                      "IMPORT", "ENTRYPOINT", "CONST", "VAR", "INT", "FLOAT", 
                      "STRING", "BOOL", "BREAK", "CLASS", "CONTINUE", "ELSE", 
                      "INHERITANCE", "IF", "NEW", "FOR", "RETURN", "VOID", 
                      "NULL", "CONSTRUCTOR", "FUNC", "SELF", "ADD", "SUB", 
                      "MUL", "DIV", "INT_DIV", "MOD", "NOT_EQUAL", "EQUAL", 
                      "LT", "GT", "LE", "GE", "OR", "AND", "NOT", "CONCATENATION", 
                      "ASSINGMENT", "ASSIGN", "LSB", "RSB", "LP", "RP", 
                      "LB", "RB", "SM", "CL", "DOT", "CM", "BOOLLIT", "STRINGLIT", 
                      "FLOATLIT", "INTLIT", "ID", "AT_ID", "NEWLINE", "UNCLOSE_STRING", 
                      "WS", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_prog = 1
    RULE_program_member_list = 2
    RULE_programMainDecl = 3
    RULE_class_decl = 4
    RULE_members = 5
    RULE_attribute_decl = 6
    RULE_val_list_decl = 7
    RULE_mutability = 8
    RULE_id_list = 9
    RULE_id_plist = 10
    RULE_val_list = 11
    RULE_val_plist = 12
    RULE_val_decl = 13
    RULE_method_decl = 14
    RULE_nor_method = 15
    RULE_con_method = 16
    RULE_param_list = 17
    RULE_param_plist = 18
    RULE_param = 19
    RULE_params = 20
    RULE_return_type = 21
    RULE_block_stm = 22
    RULE_main_block_stm = 23
    RULE_type_name = 24
    RULE_array_type = 25
    RULE_attr_type = 26
    RULE_exp = 27
    RULE_exp1 = 28
    RULE_exp2 = 29
    RULE_exp3 = 30
    RULE_exp4 = 31
    RULE_exp5 = 32
    RULE_exp6 = 33
    RULE_exp7 = 34
    RULE_exp8 = 35
    RULE_exp9 = 36
    RULE_exp10 = 37
    RULE_operands = 38
    RULE_exp_list = 39
    RULE_exp_plist = 40
    RULE_instance_access = 41
    RULE_static_attr_access = 42
    RULE_method_access = 43
    RULE_static_method_access = 44
    RULE_obj_creation = 45
    RULE_statement = 46
    RULE_main_stm = 47
    RULE_variableDeclaration = 48
    RULE_arrayDeclaration = 49
    RULE_assignmentStatement = 50
    RULE_scalarVariable = 51
    RULE_indexExpression = 52
    RULE_arrayAssignmentStatement = 53
    RULE_returnStatement = 54
    RULE_continueStatement = 55
    RULE_breakStatement = 56
    RULE_ifStatement = 57
    RULE_elseStatement = 58
    RULE_forStatement = 59
    RULE_initStm = 60
    RULE_conStm = 61
    RULE_postStm = 62
    RULE_invocationStatement = 63
    RULE_main_invocation_stm = 64
    RULE_array_lit = 65
    RULE_element = 66
    RULE_arraylit_list = 67

    ruleNames =  [ "program", "class_prog", "program_member_list", "programMainDecl", 
                   "class_decl", "members", "attribute_decl", "val_list_decl", 
                   "mutability", "id_list", "id_plist", "val_list", "val_plist", 
                   "val_decl", "method_decl", "nor_method", "con_method", 
                   "param_list", "param_plist", "param", "params", "return_type", 
                   "block_stm", "main_block_stm", "type_name", "array_type", 
                   "attr_type", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "exp8", "exp9", "exp10", "operands", 
                   "exp_list", "exp_plist", "instance_access", "static_attr_access", 
                   "method_access", "static_method_access", "obj_creation", 
                   "statement", "main_stm", "variableDeclaration", "arrayDeclaration", 
                   "assignmentStatement", "scalarVariable", "indexExpression", 
                   "arrayAssignmentStatement", "returnStatement", "continueStatement", 
                   "breakStatement", "ifStatement", "elseStatement", "forStatement", 
                   "initStm", "conStm", "postStm", "invocationStatement", 
                   "main_invocation_stm", "array_lit", "element", "arraylit_list" ]

    EOF = Token.EOF
    T__0=1
    LINE_CMT=2
    BLOCK_CMT=3
    IMPORT=4
    ENTRYPOINT=5
    CONST=6
    VAR=7
    INT=8
    FLOAT=9
    STRING=10
    BOOL=11
    BREAK=12
    CLASS=13
    CONTINUE=14
    ELSE=15
    INHERITANCE=16
    IF=17
    NEW=18
    FOR=19
    RETURN=20
    VOID=21
    NULL=22
    CONSTRUCTOR=23
    FUNC=24
    SELF=25
    ADD=26
    SUB=27
    MUL=28
    DIV=29
    INT_DIV=30
    MOD=31
    NOT_EQUAL=32
    EQUAL=33
    LT=34
    GT=35
    LE=36
    GE=37
    OR=38
    AND=39
    NOT=40
    CONCATENATION=41
    ASSINGMENT=42
    ASSIGN=43
    LSB=44
    RSB=45
    LP=46
    RP=47
    LB=48
    RB=49
    SM=50
    CL=51
    DOT=52
    CM=53
    BOOLLIT=54
    STRINGLIT=55
    FLOATLIT=56
    INTLIT=57
    ID=58
    AT_ID=59
    NEWLINE=60
    UNCLOSE_STRING=61
    WS=62
    ILLEGAL_ESCAPE=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSlangParser.EOF, 0)

        def class_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Class_declContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Class_declContext,i)


        def class_prog(self):
            return self.getTypedRuleContext(CSlangParser.Class_progContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 136
                    self.class_decl() 
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 142
                self.class_prog()


            self.state = 145
            self.match(CSlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_progContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CSlangParser.CLASS, 0)

        def LP(self):
            return self.getToken(CSlangParser.LP, 0)

        def program_member_list(self):
            return self.getTypedRuleContext(CSlangParser.Program_member_listContext,0)


        def RP(self):
            return self.getToken(CSlangParser.RP, 0)

        def INHERITANCE(self):
            return self.getToken(CSlangParser.INHERITANCE, 0)

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_class_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_prog" ):
                return visitor.visitClass_prog(self)
            else:
                return visitor.visitChildren(self)




    def class_prog(self):

        localctx = CSlangParser.Class_progContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(CSlangParser.CLASS)
            self.state = 148
            self.match(CSlangParser.T__0)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 149
                self.match(CSlangParser.INHERITANCE)
                self.state = 150
                self.match(CSlangParser.ID)


            self.state = 153
            self.match(CSlangParser.LP)
            self.state = 154
            self.program_member_list()
            self.state = 155
            self.match(CSlangParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_member_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programMainDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.ProgramMainDeclContext)
            else:
                return self.getTypedRuleContext(CSlangParser.ProgramMainDeclContext,i)


        def attribute_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Attribute_declContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Attribute_declContext,i)


        def method_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Method_declContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Method_declContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_program_member_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_member_list" ):
                return visitor.visitProgram_member_list(self)
            else:
                return visitor.visitChildren(self)




    def program_member_list(self):

        localctx = CSlangParser.Program_member_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_program_member_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16777408) != 0):
                self.state = 160
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 157
                    self.programMainDecl()
                    pass

                elif la_ == 2:
                    self.state = 158
                    self.attribute_decl()
                    pass

                elif la_ == 3:
                    self.state = 159
                    self.method_decl()
                    pass


                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramMainDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CSlangParser.FUNC, 0)

        def ENTRYPOINT(self):
            return self.getToken(CSlangParser.ENTRYPOINT, 0)

        def LB(self):
            return self.getToken(CSlangParser.LB, 0)

        def RB(self):
            return self.getToken(CSlangParser.RB, 0)

        def CL(self):
            return self.getToken(CSlangParser.CL, 0)

        def return_type(self):
            return self.getTypedRuleContext(CSlangParser.Return_typeContext,0)


        def main_block_stm(self):
            return self.getTypedRuleContext(CSlangParser.Main_block_stmContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_programMainDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramMainDecl" ):
                return visitor.visitProgramMainDecl(self)
            else:
                return visitor.visitChildren(self)




    def programMainDecl(self):

        localctx = CSlangParser.ProgramMainDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_programMainDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(CSlangParser.FUNC)
            self.state = 166
            self.match(CSlangParser.ENTRYPOINT)
            self.state = 167
            self.match(CSlangParser.LB)
            self.state = 168
            self.match(CSlangParser.RB)
            self.state = 169
            self.match(CSlangParser.CL)
            self.state = 170
            self.return_type()
            self.state = 171
            self.main_block_stm()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CSlangParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.ID)
            else:
                return self.getToken(CSlangParser.ID, i)

        def LP(self):
            return self.getToken(CSlangParser.LP, 0)

        def RP(self):
            return self.getToken(CSlangParser.RP, 0)

        def INHERITANCE(self):
            return self.getToken(CSlangParser.INHERITANCE, 0)

        def members(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.MembersContext)
            else:
                return self.getTypedRuleContext(CSlangParser.MembersContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_class_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_decl" ):
                return visitor.visitClass_decl(self)
            else:
                return visitor.visitChildren(self)




    def class_decl(self):

        localctx = CSlangParser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(CSlangParser.CLASS)
            self.state = 174
            self.match(CSlangParser.ID)
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 175
                self.match(CSlangParser.INHERITANCE)
                self.state = 176
                self.match(CSlangParser.ID)


            self.state = 179
            self.match(CSlangParser.LP)
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16777408) != 0):
                self.state = 180
                self.members()
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 186
            self.match(CSlangParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MembersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_decl(self):
            return self.getTypedRuleContext(CSlangParser.Attribute_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(CSlangParser.Method_declContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_members

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMembers" ):
                return visitor.visitMembers(self)
            else:
                return visitor.visitChildren(self)




    def members(self):

        localctx = CSlangParser.MembersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_members)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 7]:
                self.state = 188
                self.attribute_decl()
                pass
            elif token in [24]:
                self.state = 189
                self.method_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mutability(self):
            return self.getTypedRuleContext(CSlangParser.MutabilityContext,0)


        def val_list_decl(self):
            return self.getTypedRuleContext(CSlangParser.Val_list_declContext,0)


        def val_decl(self):
            return self.getTypedRuleContext(CSlangParser.Val_declContext,0)


        def SM(self):
            return self.getToken(CSlangParser.SM, 0)

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def AT_ID(self):
            return self.getToken(CSlangParser.AT_ID, 0)

        def id_list(self):
            return self.getTypedRuleContext(CSlangParser.Id_listContext,0)


        def CL(self):
            return self.getToken(CSlangParser.CL, 0)

        def attr_type(self):
            return self.getTypedRuleContext(CSlangParser.Attr_typeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_attribute_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute_decl" ):
                return visitor.visitAttribute_decl(self)
            else:
                return visitor.visitChildren(self)




    def attribute_decl(self):

        localctx = CSlangParser.Attribute_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attribute_decl)
        self._la = 0 # Token type
        try:
            self.state = 204
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 192
                self.mutability()
                self.state = 193
                _la = self._input.LA(1)
                if not(_la==58 or _la==59):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 194
                self.val_list_decl()
                self.state = 195
                self.val_decl()
                self.state = 196
                self.match(CSlangParser.SM)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 198
                self.mutability()
                self.state = 199
                self.id_list()
                self.state = 200
                self.match(CSlangParser.CL)
                self.state = 201
                self.attr_type()
                self.state = 202
                self.match(CSlangParser.SM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Val_list_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.CM)
            else:
                return self.getToken(CSlangParser.CM, i)

        def val_list_decl(self):
            return self.getTypedRuleContext(CSlangParser.Val_list_declContext,0)


        def val_decl(self):
            return self.getTypedRuleContext(CSlangParser.Val_declContext,0)


        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def AT_ID(self):
            return self.getToken(CSlangParser.AT_ID, 0)

        def CL(self):
            return self.getToken(CSlangParser.CL, 0)

        def attr_type(self):
            return self.getTypedRuleContext(CSlangParser.Attr_typeContext,0)


        def ASSIGN(self):
            return self.getToken(CSlangParser.ASSIGN, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_val_list_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVal_list_decl" ):
                return visitor.visitVal_list_decl(self)
            else:
                return visitor.visitChildren(self)




    def val_list_decl(self):

        localctx = CSlangParser.Val_list_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_val_list_decl)
        self._la = 0 # Token type
        try:
            self.state = 216
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [53]:
                self.enterOuterAlt(localctx, 1)
                self.state = 206
                self.match(CSlangParser.CM)
                self.state = 207
                _la = self._input.LA(1)
                if not(_la==58 or _la==59):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 208
                self.val_list_decl()
                self.state = 209
                self.val_decl()
                self.state = 210
                self.match(CSlangParser.CM)
                pass
            elif token in [51]:
                self.enterOuterAlt(localctx, 2)
                self.state = 212
                self.match(CSlangParser.CL)
                self.state = 213
                self.attr_type()
                self.state = 214
                self.match(CSlangParser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutabilityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(CSlangParser.CONST, 0)

        def VAR(self):
            return self.getToken(CSlangParser.VAR, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_mutability

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutability" ):
                return visitor.visitMutability(self)
            else:
                return visitor.visitChildren(self)




    def mutability(self):

        localctx = CSlangParser.MutabilityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mutability)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 218
            _la = self._input.LA(1)
            if not(_la==6 or _la==7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_plist(self):
            return self.getTypedRuleContext(CSlangParser.Id_plistContext,0)


        def AT_ID(self):
            return self.getToken(CSlangParser.AT_ID, 0)

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = CSlangParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 220
            _la = self._input.LA(1)
            if not(_la==58 or _la==59):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 221
            self.id_plist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

